# AI_FRAMEWORK

./: .gitignore  ay.py  clean.ipynb  framework.py  main.py  readme.md
Drawing/: package-lock.json
Drawing/src/: App.jsx
NN/: ay.py  draft.md  framework.py  main.py  testing.ipynb  tests.ipynb  training.ipynb
NN/.ipynb_checkpoints/: testing-checkpoint.ipynb
NN/C++/: AI  CMakeCache.txt  CMakeLists.txt  Makefile  TensorFlowLiteClone  ai  ai.cpp  cmake_install.cmake  main.cpp
NN/C++/include/: layer.h  loss.h  optimizer.h  tensor.h
NN/C++/src/: layer.cpp  loss.cpp  optimizer.cpp  tensor.cpp
NN/PY/: framework.py  main.py  tempCodeRunnerFile.py  testing.ipynb  training.ipynb
NN/PY/.ipynb_checkpoints/: training-checkpoint.ipynb  training-pytorch-checkpoint.ipynb
NN/PY/lib/: functions.c
NN/lib/: functions.c
lib/: functions.c
